@@ -1,3 +1,6 @@
 # OhanaMediaPlayer
 Projet de vidéothèque familiale permettant à chaque membre d'une même famille de se connecter sur son espace pour parcourir et visioner des films. 
 Permet aux parents de contrôler les catégories de films que peuvent voir les enfants/ados
+
+# VM options
+--module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml,javafx.media
